edit intro__info with adding icons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <h3>Personal loan</h3>
             <h1>Put your plans into actions.</h1>
             <div class="intro__icon">
+                <div class="icons__item icons__cloud">Online application</div>
+                <div class="icons__item icons__money">Up to $50,000</div>
+                <div class="icons__item icons__timer">The money is yours in 48h</div>
             </div>
         </div>
         <form class="intro__form">
